; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/plan/extr_initsplan.c_build_implied_join_equality.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/plan/extr_initsplan.c_build_implied_join_equality.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BOOLOID = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @build_implied_join_equality(i32 %0, i32 %1, i32* %2, i32* %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* @BOOLOID, align 4
  %19 = load i32*, i32** %10, align 8
  %20 = call i32 @copyObject(i32* %19)
  %21 = load i32*, i32** %11, align 8
  %22 = call i32 @copyObject(i32* %21)
  %23 = load i32, i32* @InvalidOid, align 4
  %24 = load i32, i32* %9, align 4
  %25 = call i32* @make_opclause(i32 %17, i32 %18, i32 0, i32 %20, i32 %22, i32 %23, i32 %24)
  store i32* %25, i32** %16, align 8
  %26 = load i32*, i32** %16, align 8
  %27 = load i32, i32* %14, align 4
  %28 = load i32, i32* %12, align 4
  %29 = load i32, i32* %13, align 4
  %30 = call i32* @make_restrictinfo(i32* %26, i32 1, i32 0, i32 0, i32 %27, i32 %28, i32* null, i32 %29)
  store i32* %30, i32** %15, align 8
  %31 = load i32*, i32** %15, align 8
  %32 = call i32 @check_mergejoinable(i32* %31)
  %33 = load i32*, i32** %15, align 8
  %34 = call i32 @check_hashjoinable(i32* %33)
  %35 = load i32*, i32** %15, align 8
  ret i32* %35
}

declare dso_local i32* @make_opclause(i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @copyObject(i32*) #1

declare dso_local i32* @make_restrictinfo(i32*, i32, i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @check_mergejoinable(i32*) #1

declare dso_local i32 @check_hashjoinable(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
